feat: Markdownエディタ実装 (Phase 6)
- markedライブラリでMarkdownプレビュー表示
- ダブルクリックで編集モードに入る
- メモ外クリックで自動保存終了
- 編集ボタンを削除（ダブルクリック編集に統一）
- バンドルサイズ82%削減（1.5MB  276KB）

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@botanicastudios/element-selector": "^0.1.10",
     "@uiw/react-md-editor": "^3.0.0",
+    "marked": "^17.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "uuid": "^11.0.0"
